# vulkan-cereal

./: .clang-format  .gitignore  Android.bp  CMakeLists.txt  README.md  cereal.py  gtestdownloadCMakeLists.txt.in  test.py
base/: AlignedBuf.cpp  Android.bp  ArraySize.h  ArraySize_unittest.cpp  BumpPool.h  CMakeLists.txt  CompressingStream.cpp  CompressingStream.h  ConditionVariable.h  ContiguousRangeMapper_unittest.cpp  DecompressingStream.cpp  DecompressingStream.h  EintrWrapper.h  EntityManager.h  FileUtils.cpp  FileUtils.h  FunctorThread.cpp  GLObjectCounter.cpp  GLObjectCounter.h  HealthMonitor.cpp  HealthMonitor_unittest.cpp  LayoutResolver.cpp  Lock.h  Lookup.h  LruCache.h  LruCache_unittest.cpp  ManagedDescriptor_unittest.cpp  MemStream.cpp  MemoryTracker.cpp  MemoryTracker.h  Metrics.cpp  Metrics.h  MetricsNoOp.cpp  MruCache.h  Optional_unittest.cpp  PathUtils.cpp  PathUtils.h  ScopedFd.h  SharedLibrary.cpp  SharedLibrary.h  (+32 more)
base/testing/: TestTempDir.h  TestUtils.h  file_io.cpp  file_io.h
host-common/: AddressSpaceService.h  Android.bp  AndroidAgentFactory.h  AndroidPipe.cpp  AndroidPipe.h  CMakeLists.txt  DeviceContextRunner.h  FeatureControl.h  FeatureControlDefGuest.h  FeatureControlDefHost.h  FeatureControlOverride.cpp  GfxstreamFatalError.cpp  GfxstreamFatalError.h  GfxstreamFatalError_unittest.cpp  GoldfishDma.h  GoldfishSyncCommandQueue.cpp  GoldfishSyncCommandQueue.h  GraphicsAgentFactory.cpp  HostAddressSpace.cpp  HostAddressSpace.h  HostAddressSpace_unittest.cpp  HostmemIdMapping.cpp  HostmemIdMapping.h  HostmemIdMapping_unittest.cpp  MultiDisplay.h  RefcountPipe.cpp  RefcountPipe.h  RenderDoc.h  RenderDoc_unittest.cpp  address_space_device.cpp  address_space_device.h  address_space_device.hpp  address_space_device_control_ops.h  address_space_graphics.cpp  address_space_graphics.h  address_space_graphics_types.h  address_space_graphics_unittests.cpp  address_space_host_media.cpp  address_space_host_media.h  address_space_host_memory_allocator.cpp  (+27 more)
host-common/avd/: hw-config.cpp  hw-config.h  hw-lcd.h  info.cpp  info.h  util.h
host-common/opengl/: EmuglBackendList.cpp  EmuglBackendScanner.cpp  GLProcessPipe.cpp  GLProcessPipe.h  NativeGpuInfo_windows.cpp  OpenglEsPipe.cpp  OpenglEsPipe.h  emugl_config.cpp  emugl_config.h  gpuinfo.cpp  gpuinfo.h  logger.cpp  logger.h
host-common/testing/: HostAddressSpace.cpp  MockAndroidAgentFactory.h  MockAndroidEmulatorWindowAgent.cpp  MockGraphicsAgentFactory.cpp  MockGraphicsAgentFactory.h
protocols/generic-apigen/: ApiGen.cpp  CMakeLists.txt
snapshot/: Android.bp  CMakeLists.txt  common.h
stream-servers/: Android.bp  BorrowedImage.h  BorrowedImageVk.h  Buffer.cpp  Buffer.h  CMakeLists.txt  ChannelStream.cpp  ColorBuffer.cpp  ColorBuffer.h  Compositor.h  CompositorGl.cpp  CompositorGl.h  CompositorVk.cpp  CompositorVk.h  ContextHelper.h  Debug.cpp  Display.cpp  Display.h  DisplaySurface.cpp  DisplaySurface.h  DisplaySurfaceUser.cpp  DisplaySurfaceUser.h  DisplayVk.cpp  DisplayVk.h  FbConfig.cpp  FenceSync.cpp  FenceSync.h  FrameBuffer.cpp  FrameBuffer.h  GLESVersionDetector.cpp  GfxStreamAgents.cpp  GfxStreamAgents.h  GfxStreamBackend.cpp  GfxStreamBackend.h  GfxStreamBackendInitOverride.cpp  Handle.h  Hwc2.cpp  Hwc2.h  IOStream.h  NativeSubWindow.h  (+54 more)
stream-servers/OpenGLESDispatch/: Android.bp  CMakeLists.txt  GLESv1Dispatch.cpp  GLESv2Dispatch.cpp  OpenGLDispatchLoader.cpp  RenderEGL_extensions_functions.h  RenderEGL_extensions_static_translator_namespaced_header.h  RenderEGL_snapshot_functions.h  RenderEGL_snapshot_static_translator_namespaced_header.h  gles1_only.entries  gles2_extensions.entries  gles2_extensions_functions.h  gles2_extensions_static_translator_namespaced_header.h  gles32_only.entries  gles32_only_functions.h  gles32_only_static_translator_namespaced_header.h  gles3_extensions_functions.h  gles3_extensions_static_translator_namespaced_header.h
stream-servers/apigen-codec-common/: Android.bp  CMakeLists.txt  ChecksumCalculator.cpp  ChecksumCalculatorThreadInfo.cpp  X11Support.cpp  X11Support.h
stream-servers/compressedTextureFormats/: Android.bp  AstcCpuDecompressor.h  AstcCpuDecompressorImpl.cpp  AstcCpuDecompressorNoOp.cpp  AstcCpuDecompressor_unittest.cpp  CMakeLists.txt
stream-servers/gl/: Android.bp  BorrowedImageGl.h  BufferGl.cpp  BufferGl.h  CMakeLists.txt  ColorBufferGl.cpp  ColorBufferGl.h  CompositorGl.cpp  CompositorGl.h  DisplayGl.cpp  DisplayGl.h  DisplaySurfaceGl.cpp  DisplaySurfaceGl.h  EmulatedEglConfig.cpp  EmulatedEglConfig.h  EmulatedEglContext.cpp  EmulatedEglContext.h  EmulatedEglFenceSync.cpp  EmulatedEglFenceSync.h  EmulatedEglImage.cpp  EmulatedEglImage.h  EmulatedEglWindowSurface.cpp  EmulatedEglWindowSurface.h  EmulationGl.cpp  EmulationGl.h  GLESVersionDetector.cpp  ReadbackWorkerGl.cpp  ReadbackWorkerGl.h  RenderContext.cpp  RenderContext.h  TextureDraw.h  TextureResize.cpp  YUVConverter.cpp  YUVConverter.h
stream-servers/gles1_dec/: Android.bp  CMakeLists.txt  gles1_dec.cpp
stream-servers/gles2_dec/: Android.bp  CMakeLists.txt  GLESv2Decoder.cpp  GLESv2Decoder.h  gles2_dec.cpp  gles2_opcodes.h  gles2_server_context.cpp
stream-servers/glestranslator/: CMakeLists.txt
stream-servers/libGLSnapshot/: Android.bp  CMakeLists.txt  GLSnapshot.h
stream-servers/renderControl_dec/: Android.bp  CMakeLists.txt  renderControl_dec.cpp  renderControl_dec.h  renderControl_opcodes.h  renderControl_server_context.cpp  renderControl_server_context.h  renderControl_server_proc.h
stream-servers/testlibs/: CMakeLists.txt
stream-servers/tests/: CompositorVk_unittest.cpp  DefaultFramebufferBlit_unittest.cpp  DisplayVk_unittest.cpp  FrameBuffer_unittest.cpp  GLES1Dispatch_unittest.cpp  GLSnapshotPixelOperations_unittest.cpp  GLSnapshotRasterization_unittest.cpp  GLSnapshotRenderbuffers_unittest.cpp  GLSnapshotRendering_unittest.cpp  GLSnapshotTestDispatch.cpp  GLSnapshotTestDispatch.h  GLSnapshotTesting.cpp  GLSnapshotTesting.h  GLTestUtils.h  HelloTriangle.h  ImageUtils.cpp  (+12 more)
utils/: CMakeLists.txt  GfxApiLogger.cpp  GfxApiLogger_unittest.cpp  RenderDoc_unittest.cpp
(+352 files in other folders)
